k8s/app/app-deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webapp-statefulset
spec:
  replicas: 1
  serviceName: webapp-service
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp-container
          image: dimitri98/openjdk17-webapp
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
            requests:
              cpu: "0.5"
              memory: "256Mi"
          ports:
            - containerPort: 8080
              name: http
